end footer copyright

--- a/index.html
+++ b/index.html
@@ -749,10 +749,43 @@
 		</div>
 	</div>
 	<!-- copyright section -->
-	<div class="footer__copyright">
+	<div class="footer__copyright p_20 dark__bg">
+		<div class="wrapper">
+			<div class="row">
+				<!-- copyright text -->
+				<div class="column__12 column__md__6">
+					<div class="copyright__text">
+						<p class="mb_20">Copyright © 2036 Kind Heart Charity Org. Design:
+							<a href="https://github.com/javdev68">JavDev</a>
+						</p>
+					</div>
+				</div>
+				<!-- copyright social -->
+				<div class="column__12 column__md__6">
+					<div class="social__footer">
+						<ul class="social__list social__list__solid">
+							<li class="social__item">
+								<a href="#">
+									<i class="fab fa-linkedin-in"></i>
+								</a>
+							</li>
+							<li class="social__item">
+								<a href="#">
+									<i class="fa-light fa-telegram"></i>
+								</a>
+							</li>
+							<li class="social__item">
+								<a href="https://github.com/javdev68">
+									<i class="fab fa-github-alt"></i>
+								</a>
+							</li>
+						</ul>
+					</div>
+				</div>
+			</div>
+		</div>
 
 	</div>
-
 </div>
 
 
