end design mobile navbar menu

--- a/index.html
+++ b/index.html
@@ -55,9 +55,9 @@
 		</div>
 	</div>
 </div>
-<div id="header" >
+<header id="header" >
 	<div class="wrapper">
-		<div class="row">
+		<div class="row j_c_between">
 			<div class="logo__col column__8 column__md__3">
 				<div class="logo">
 					<a href="#" class="d__flex a_i_center">
@@ -69,7 +69,7 @@
 					</a>
 				</div>
 			</div>
-			<div class="main__navbar__col column__4 column__md__9 d__flex j_c_end a_i_center">
+			<div class="main__navbar__col column__2 column__md__9 d__flex j_c_end a_i_center">
 				<nav class="main__navbar a_i_center">
 					<ul class="nav__menu">
 						<li class="nav__menu__item">
@@ -96,13 +96,44 @@
 					</ul>
 					<a href="pages/donate.html" class="header__button button__link button__link__outline__second">Donate</a>
 				</nav>
+				<button type="button" class="btn__mobile btn__navbar__toggle">
+					<i class="fa-light fa-bars"></i>
+				</button>
 			</div>
 
 		</div>
 	</div>
+</header>
+<!-- mobile navbar menu -->
+<div class="mobile__navbar">
+	<button class="btn__navbar__close">
+		<i class="fa-light fa-close"></i>
+	</button>
+	<nav class="navbar__menu mobile__nav">
+		<ul class="nav__menu mobile__menu">
+			<li class="nav__menu__item mobile__menu__item">
+				<a href="index.html">home</a>
+			</li>
+			<li class="nav__menu__item mobile__menu__item">
+				<a href="index.html">about</a>
+			</li>
+			<li class="nav__menu__item mobile__menu__item">
+				<a href="index.html">causes</a>
+			</li>
+			<li class="nav__menu__item mobile__menu__item">
+				<a href="index.html">volunteer</a>
+			</li>
+			<li class="nav__menu__item mobile__menu__item">
+				<a href="index.html">news</a>
+			</li>
+			<li class="nav__menu__item mobile__menu__item">
+				<a href="index.html">contact</a>
+			</li>
+		</ul>
+	</nav>
 </div>
 
-<!--------- MAIN ------->
+<!-------------------- MAIN ------------------->
 <main id="main">
 	<!--================== slider ===============-->
 	<section id="slider">
